<resources>
    <string name="app_name">Beautify</string>
    <string name="connection_error_msg">Connection Error!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="check_internet_connection_msg">Check Internet Connection!</string>
    <string name="beauty_a_touch_away">Beauty a touch away</string>
    <string name="salon_transition">salon_transition</string>
    <string name="mcam_defaultDuration">00:00</string>
    <string name="mcam_permissions_needed">Permissions Needed</string>
    <string name="mcam_video_perm_warning">Permission to access your microphone and camera is needed, the camera will now close.</string>
    <string name="mcam_retry">Retake</string>
    <string name="mcam_use_video">USE VIDEO</string>
    <string name="mcam_use_stillshot">USE Photo</string>
    <string name="mcam_portrait">Portrait</string>
    <string name="mcam_portrait_warning">It\'s recommended that you record in landscape. Record in portrait?</string>
    <string name="mcam_yes">Yes</string>
    <string name="mcam_error">Error</string>
    <string name="mcam_video_capture_unsupported">Your device does not support video capture.</string>
    <string name="mcam_no_audio_access">You haven\'t given access to your microphone; no audio will be recorded.</string>
    <string name="mcam_file_size_limit_reached">You\'ve reached the maximum file size!</string>
    <string name="mcam_image_preview_error_title">Image preview error</string>
    <string name="mcam_image_preview_error_message">Could not decode bitmap</string>
    <string name="mcam_use_photo">Use</string>
    <string name="mcam_retake_photo">Retake</string>
    <string name="mcam_discard_photo">Discard</string>
    <string name="drescription">loream ipsum dollar sit amet, consectetur adipisc. Sed fedilisc hendrerit turpis.</string>
    <string name="login">Login</string>
    <string name="login_facebook">Login With Facebook</string>
    <string name="hint_email">Email/Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="forgot_pass"><u>Forgot password ?</u></string>
    <string name="or_string">OR</string>
    <string name="not_member">Not a member yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="label_forgot_pass">FORGOT PASSWORD</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="passcode">Passcode</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="resent_passcode"><u>Resend Passcode</u></string>
    <string name="create_account">Create an account</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="address">Address</string>
    <string name="term_cond">Terms and conditions</string>
    <string name="create">Create</string>
    <string name="title_home">Home</string>
    <string name="title_deals">Deals</string>
    <string name="title_my_bookings">My Bookings</string>
    <string name="title_more">More</string>
    <string name="home_fragment">Home_Fragment</string>
    <string name="deal_fragment">Deal_Fragment</string>
    <string name="my_booking_fragment">My_Booking_Fragment</string>
    <string name="more_fragment">More_Fragment</string>
    <string name="search_hint">Search here...</string>
    <string name="search_title">Search here..</string>
    <string name="dashboard">dashboard</string>
    <string name="deals">deals</string>
    <string name="my_bookings">my bookings</string>
    <string name="more">more</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="picture_transition_name">myTransition</string>
    <string name="to">to</string>
    <string name="view_map">View map</string>
    <string name="services">Services</string>
    <string name="product">Products</string>
    <string name="city">City</string>
    <string name="signup_first_name_error">Enter First Name</string>
    <string name="signup_last_name_error">Enter Last Name</string>
    <string name="signup_email_error">Enter Email</string>
    <string name="signup_mobile_error">Enter Mobile No.</string>
    <string name="signup_city_error">Enter City</string>
    <string name="signup_password_error">Enter Password</string>
    <string name="signup_confirm_password_error">Confirm Password</string>
    <string name="signup_password_not_match_error">Password do not match</string>
    <string name="signup_t_and_c_error">Please accept Terms and Conditions</string>
    <string name="dummy_text">Loreum ipsum dollar sit amet, consectetur adipiscing edit. Sed vulputate enim vel metus mattis, eu alliquam</string>
    <string name="login_username_error">Enter Email or Password</string>
    <string name="login_password_error">Enter Password</string>
    <string name="enter_email_error">Enter email address.</string>
    <string name="enter_valid_email_error">Enter valid email address</string>
    <string name="enter_passcode_error">Enter passcode</string>
    <string name="password_not_match_error">Passwords do not match</string>
    <string name="brides_maid">bridesmaid</string>
    <string name="comment">Comment :</string>
    <string name="view_on_map">View on map</string>
    <string name="list">List</string>
    <string name="menu_spinner">Select language</string>
    <string name="service_cost_format">%s$</string>
    <string name="service_duration_format">(Duration: %d minutes)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="spinner_list_item_array">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string name="google_maps_key">AIzaSyD69hMNVJ_LW2kbktQH-zA0tVGZqyWxTgo</string>
    <string name="search">Search</string>
    <string name="select_service_error">Select a service to continue</string>
    <string name="map_view">MAP VIEW</string>
    <string name="intro_message">Intro Messages</string>
    <string name="selected_place">Selected Place</string>
    <string name="place_details">place detail</string>
    <string name="book_for_marriage">BOOK FOR MARRIAGE</string>
    <string name="marriage_booking">Marriage Booking</string>
    <string name="reserve_products">reserve products</string>
    <string name="book_now">BOOK NOW</string>
    <string name="reserve_now">reserve now</string>
    <string name="no_show">no show</string>
    <string name="canceled">canceled</string>
    <string name="booking_date">Booking Date</string>
    <string name="time_slot">Time slot</string>
    <string name="additional_detail">Additional Details</string>
    <string name="add_bridemaid">ADD BRIDESMAID</string>
    <string name="add_bridemaid_label">ADD BRIDESMAID :</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="add_more_bridesmaid">ADD MORE BRIDESMAID</string>
    <string name="hair">Hair</string>
    <string name="makeup">Makeup</string>
    <string name="both">Both</string>
    <string name="booking_date_error">Please select a booking date</string>
    <string name="time_slot_error">Please select a time slot</string>
    <string name="additional_detail_error">Please provide some additional details</string>
    <string name="bridesmaid_name_error">Please fill the bridesmaid name</string>
    <string name="service_type_error">Please select a service type</string>
    <string name="bridesmaid_addition_error">Maximum 10 bridesmaids can be added</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="jan_full">JANUARY</string>
    <string name="feb_full">FEBRUARY</string>
    <string name="mar_full">MARCH</string>
    <string name="apr_full">APRIL</string>
    <string name="may_full">MAY</string>
    <string name="jun_full">JUNE</string>
    <string name="jul_full">JULY</string>
    <string name="aug_full">AUGUST</string>
    <string name="sep_full">SEPTEMBER</string>
    <string name="oct_full">OCTOBER</string>
    <string name="nov_full">NOVEMBER</string>
    <string name="dec_full">DECEMBER</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="next">Next</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="select_time_slot_error">Select a Time Slot</string>
    <string name="connect">connect</string>
    <string name="with_beautify">with beautify</string>
    <string name="get_started">get started</string>
    <string name="pick">pick</string>
    <string name="the_best">the best</string>
    <string name="find">find</string>
    <string name="our_services">our services</string>
    <string name="english_language">English</string>
    <string name="arabic_language">Arabic</string>
    <string name="booking_fee_note">Note: Tap here to know how booking fee will be calculated</string>
    <string name="currency_usd">$</string>
    <string name="bill_amount_format">Total: $%s</string>
    <string name="select_employee">SELECT EMPLOYEE</string>
    <string name="pick_a_date">PICK A DATE</string>
    <string name="pick_a_time">PICK A TIME</string>
    <string name="order_placed">ORDER PLACED!</string>
    <string name="time_slot_not_available_enough">Not enough time slots available for selected service</string>
    <string name="time_slot_not_available_enough_plural">Not enough time slots available for selected services</string>
    <string name="web_response_300">Your account has been created successfully</string>
    <string name="web_response_301">Some error found</string>
    <string name="web_response_302">Invalid email/mobile or password</string>
    <string name="web_response_303">Logged in</string>
    <string name="web_response_304">Failed to create token</string>
    <string name="web_response_305">OTP has been sent on your registered email</string>
    <string name="web_response_306">Customer\'s details</string>
    <string name="web_response_307">Your password has been changed successfully</string>
    <string name="web_response_308">Your password could not saved</string>
    <string name="web_response_309">Parameters did not match</string>
    <string name="web_response_310">Salons\' List</string>
    <string name="web_response_311">Salons\' Data</string>
    <string name="web_response_312">Your booking has been done successfully</string>
    <string name="web_response_313">Cities List</string>
    <string name="web_response_314">Categories\' List</string>
    <string name="web_response_315">Services\' List</string>
    <string name="web_response_316">Time Lists</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Address (Optional)</string>
    <string name="fb_enter_additional_details_msg">Please enter following details\nto continue</string>
    <string name="select_city">City</string>
    <string name="send">Send</string>
    <string name="full_name">Full Name</string>
    <string name="question">Question</string>
</resources>