<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.androidhive.recyclerviewsearch.MainActivity">
    <item
        android:id="@+id/spinner"
        android:title="@string/menu_spinner"
        app:actionViewClass="android.widget.Spinner"
        android:background="@color/beautyfy_brown"
        
        app:showAsAction="always" />
    <item
        android:id="@+id/action_salon_list_view"
        android:icon="@drawable/ic_list"
        android:orderInCategory="100"
        android:title="@string/list"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_salon_map_view"
        android:icon="@drawable/ic_view_map"
        android:orderInCategory="100"
        android:title="@string/view_on_map"
        app:showAsAction="always"
        />

</menu>