<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/beautify_background_black">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp">

        <com.beatutify.customviews.NMGTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textColor="@color/beautify_text_white"
            android:textSize="@dimen/slide_title_small"
            app:textAllCaps="true"
            app:fontName="oswald_bold.ttf"/>
        <com.beatutify.customviews.NMGTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/our_services"
            android:textColor="@color/beautify_text_white"
            android:textSize="@dimen/slide_title_big"
            app:textAllCaps="true"
            android:textStyle="bold"
            app:fontName="oswald_bold.ttf"
            />

        <com.beatutify.customviews.NMGTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/drescription"
            android:textAlignment="center"
            android:textColor="@color/beautify_text_light_white"
            app:fontName="oswald_regular.ttf"
            android:textSize="@dimen/slide_desc" />

    </LinearLayout>
</RelativeLayout>