<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="resetPassRequest"
            type="com.beatutify.model.ResetPasswordRequestModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/login_bg_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_22sdp"
                android:orientation="vertical">

                <com.beatutify.customviews.NMGTextView
                    android:id="@+id/txt_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reset_password"
                    android:textColor="@color/beautyfy_brown"
                    android:textSize="@dimen/_22sdp"
                    android:textStyle="bold"
                    app:fontName="oswald_regular.ttf" />

                <com.beatutify.customviews.NMGEditText
                    android:id="@+id/edt_input_passcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner_edit"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/edt_drawable_padding"
                    android:hint="@string/passcode"
                    android:inputType="number"
                    android:paddingLeft="@dimen/edt_padding_left"
                    android:singleLine="true"
                    android:text="@={resetPassRequest.otp}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/edt_text_size"
                    app:fontName="sf_ui_text_regular.otf" />

                <com.beatutify.customviews.NMGEditText
                    android:id="@+id/edt_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner_edit"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/edt_drawable_padding"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/edt_padding_left"
                    android:singleLine="true"
                    android:text="@={resetPassRequest.password}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/edt_text_size"
                    app:fontName="sf_ui_text_regular.otf" />

                <com.beatutify.customviews.NMGEditText
                    android:id="@+id/edt_input_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_corner_edit"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/edt_drawable_padding"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/edt_padding_left"
                    android:singleLine="true"
                    android:text="@={resetPassRequest.confirmPassword}"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="@dimen/edt_text_size"
                    app:fontName="sf_ui_text_regular.otf" />

                <com.beatutify.customviews.NMGTextView
                    android:id="@+id/txt_resend_passcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="2dp"
                    android:text="@string/resent_passcode"
                    android:textColor="@color/beautyfy_brown"
                    android:textSize="@dimen/_12sdp"
                    app:fontName="sf_ui_text_regular.otf" />

                <com.beatutify.customviews.NMGButton
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_default_bg"
                    android:clickable="true"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:textColor="@color/beautify_text_white"
                    android:textSize="@dimen/_18sdp"
                    app:fontName="oswald_regular.ttf" />
            </LinearLayout>

        </ScrollView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp">

            <com.beatutify.customviews.NMGTextView
                android:id="@+id/txtBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/back"
                android:textColor="@color/beautify_text_white"
                android:textSize="@dimen/bottom_label_text_size"
                android:padding="@dimen/_10sdp"
                app:fontName="oswald_regular.ttf" />

            <com.beatutify.customviews.NMGTextView
                android:id="@+id/txtSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/beautify_text_white"
                android:textSize="@dimen/bottom_label_text_size"
                android:padding="@dimen/_10sdp"
                app:fontName="oswald_regular.ttf"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </RelativeLayout>
</layout>