<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        android:orientation="vertical"
        tools:context="com.beatutify.activity.ContactUsActivity">

        <com.beatutify.customviews.NMGEditText
            android:id="@+id/edt_input_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/round_corner_edit"
            android:drawablePadding="@dimen/edt_drawable_padding"
            android:gravity="center_vertical"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_14sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/beautify_text_light_white"
            android:textSize="@dimen/_14sdp"
            app:fontName="sf_ui_text_regular.otf" />
        <com.beatutify.customviews.NMGEditText
            android:id="@+id/edt_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/round_corner_edit"
            android:drawablePadding="@dimen/edt_drawable_padding"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_14sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/beautify_text_light_white"
            android:textSize="@dimen/_14sdp"
            app:fontName="sf_ui_text_regular.otf" />
        <com.beatutify.customviews.NMGEditText
            android:id="@+id/edt_input_confirm_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/round_corner_edit"
            android:drawablePadding="@dimen/edt_drawable_padding"
            android:gravity="center_vertical"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLines="1"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_14sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/beautify_text_light_white"
            android:textSize="@dimen/_14sdp"
            app:fontName="sf_ui_text_regular.otf" />
        <com.beatutify.customviews.NMGEditText
            android:id="@+id/edt_input_question"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/round_corner_edit"
            android:drawablePadding="@dimen/edt_drawable_padding"
            android:hint="@string/question"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingLeft="@dimen/_14sdp"
            android:paddingTop="@dimen/_15sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/beautify_text_light_white"
            android:textSize="@dimen/_14sdp"
            app:fontName="sf_ui_text_regular.otf" />
        <com.beatutify.customviews.NMGButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_default_bg"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/send"
            android:textAllCaps="true"
            android:textColor="@color/beautify_text_white"
            android:textSize="@dimen/_18sdp"
            app:fontName="oswald_regular.ttf" />
    </LinearLayout>
</layout>